testdata/baselines/reference/submodule/compiler/jsEnumTagOnObjectFrozen.errors.txt
usage.js(1,38): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== usage.js (1 errors) ====
    const { Thing, useThing, cbThing } = require("./index");
                                         ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
    useThing(Thing.a);
    
    /**
     * @typedef {Object} LogEntry
     * @property {string} type
     * @property {number} time
     */
    
    cbThing(type => {
        /** @type {LogEntry} */
        const logEntry = {
            time: Date.now(),
            type,
        };
    });
    
==== index.js (0 errors) ====
    /** @enum {string} */
    const Thing = Object.freeze({
        a: "thing",
        b: "chill"
    });
    
    exports.Thing = Thing;
    
    /**
     * @param {Thing} x
     */
    function useThing(x) {}
    
    exports.useThing = useThing;
    
    /**
     * @param {(x: Thing) => void} x
     */
    function cbThing(x) {}
    
    exports.cbThing = cbThing;
    